--- a/style.css
+++ b/style.css
@@ -345,4 +345,7 @@ a:hover {
 .picandroid {
     width: 75%;
     height: auto;
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 3s forwards;
 }
