--- a/android.css
+++ b/android.css
@@ -5,12 +5,11 @@ body {
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #000;
+    background-color: black;
         }
         .container {
             text-align: center;
             padding: 20px;
-            background-color: #000;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
         }
