--- a/android.css
+++ b/android.css
@@ -6,6 +6,7 @@ body {
             align-items: center;
             min-height: 100vh;
     background-color: black;
+    font: 'Inter';
         }
         .container {
             text-align: center;
