--- a/android.css
+++ b/android.css
@@ -6,23 +6,35 @@ body {
             align-items: center;
             min-height: 100vh;
     background-color: black;
-    font: 'Inter';
         }
-        .container {
+
+.container {
             text-align: center;
             padding: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
-        }
-        .header-image {
+}
+        
+
+.header-image {
             max-width: 100%;
             height: auto;
+}
+        
+
+h1 {
+    color: #FFF;
+    font-size: 1.5em;
+}
+        
+
+p {
+    color: #FFF;
+    font-size: 1em;
         }
-        h1 {
-            color: #FFF;
-            font-size: 1.5em;
-        }
-        p {
-            color: #FFF;
-            font-size: 1em;
-        }
+
+@font-face {
+    font-family: 'Inter';
+    src: url('Inter.ttf') format('truetype');
+    /* Aggiungi altri formati del font se necessario */
+}
