--- a/android.css
+++ b/android.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Inter';
-    src: url('main/Inter.ttf') format('truetype');
+    src: url('Inter.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
